...
  @override
  Widget build(BuildContext context) {
    final screenWidth = MediaQuery.of(context).size.width;
    return Stack(
      children: [
        CachedNetworkImage(
          key: const Key('image_detail'),
          imageUrl: 'https://image.tmdb.org/t/p/w500${movie.posterPath}',
          width: screenWidth,
          placeholder: (context, url) => const Center(
            child: CircularProgressIndicator(),
          ),
          errorWidget: (context, url, error) => const Icon(Icons.error),
...
                        child: Column(
                          crossAxisAlignment: CrossAxisAlignment.start,
                          children: [
                            Text(
                              movie.title,
                              style: kHeading5,
                              key: const Key('title_detail'),
                            ),
                            BlocBuilder<WatchlistBloc, WatchlistStatusState>(
                                builder: (context, state) {
                              return ElevatedButton(
                                key: const Key('watchlist_button'),
                                onPressed: () async {
                                  if (!state.isAddedToWatchlist) {
                                    context.read<WatchlistBloc>().add(
                                          OnSaveWatchlistRequest(
                                              movie, category.name),
                                        );
...
                                child: Row(
                                  mainAxisSize: MainAxisSize.min,
                                  children: [
                                    state.isAddedToWatchlist
                                        ? const Icon(Icons.check)
                                        : const Icon(Icons.add),
                                    const Text('Watchlist'),
                                  ],
                                ),
                              );
                            }),
                            Text(
                              _showGenres(movie.genres),
                              key: const Key('genres'),
                            ),
                            Text(
                              _showDuration(movie.runtime),
                              key: const Key('duration'),
                            ),
                            Row(
                              key: const Key('rating'),
                              children: [
                                RatingBarIndicator(
                                  rating: movie.voteAverage / 2,
                                  itemCount: 5,
                                  itemBuilder: (context, index) => const Icon(
                                    Icons.star,
...
                                ),
                                Text('${movie.voteAverage}')
                              ],
                            ),
                            const SizedBox(height: 16),
                            Text(
                              'Overview',
                              style: kHeading6,
                            ),
                            Text(
                              movie.overview,
                              key: const Key('overview_value'),
                            ),
                            if (category == CategoryMovie.TvSeries ||
                                movie.seasons != null)
                              Column(
                                crossAxisAlignment: CrossAxisAlignment.start,
                                children: [
                                  const SizedBox(height: 16),
                                  Text(
                                    'Seasons',
                                    style: kHeading6,
                                  ),
                                  SizedBox(
                                    height: 210,
                                    child: ListView.builder(
                                      key: const Key('seasons_list'),
                                      shrinkWrap: true,
                                      scrollDirection: Axis.horizontal,
                                      itemBuilder: (context, index) {
                                        final season = movie.seasons![index];
                                        return SeasonTvCardList(season);
                                      },
...
                                    ),
                                  ),
                                ],
                              ),
                            const SizedBox(height: 16),
                            Text(
                              'Recommendations',
                              style: kHeading6,
                            ),
                            BlocBuilder<RecommendationBloc, BlocState>(
                              builder: (context, state) {
                                if (state is StateLoading) {
                                  return const Center(
...
                                  );
                                } else if (state is StateHasData) {
                                  final result = state.result;
                                  return SizedBox(
                                    height: 150,
                                    child: ListView.builder(
                                      key: const Key('recommendation_list'),
                                      scrollDirection: Axis.horizontal,
                                      itemBuilder: (context, index) {
                                        final movie = result[index];
                                        return Padding(
                                          padding: const EdgeInsets.all(4.0),
                                          child: InkWell(
...
        Padding(
          padding: const EdgeInsets.all(8.0),
          child: CircleAvatar(
            backgroundColor: kRichBlack,
            foregroundColor: Colors.white,
            child: IconButton(
              key: const Key('back_button_detail'),
              icon: const Icon(Icons.arrow_back),
              onPressed: () {
                Navigator.pop(context);
              },
            ),
          ),
...
