...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(
          widget.category == CategoryMovie.Movies
              ? 'Search Movies'
              : 'Search TV Series',
        ),
      ),
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
...
                              );
                            },
                            itemCount: result.length,
                          )
                        : SingleChildScrollView(
                            child: Center(
                              key: const Key('empty_message'),
                              child: Column(
                                children: [
                                  Image.asset(
                                    'assets/empty.png',
                                    width: 240,
                                    height: 240,
                                    key: const Key('empty_image'),
                                  ),
                                  const Text(
                                    'No Data',
                                    style: TextStyle(fontSize: 20),
                                  ),
                                ],
                              ),
                            ),
                          ),
...
