...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        leading: const Icon(
          Icons.menu,
          key: Key("menu_button"),
        ),
        title: const Text('Ditonton'),
      ),
      body: Padding(
        padding: const EdgeInsets.all(8.0),
        child: SingleChildScrollView(
...
                },
              ),
              const SizedBox(
                height: 10,
              ),
              Text(
                'Popular Movies',
                style: kHeading6,
              ),
              BlocBuilder<PopularMoviesBloc, BlocState>(
                builder: (context, state) {
                  if (state is StateLoading) {
                    return const Center(
...
                },
              ),
              const SizedBox(
                height: 10,
              ),
              Text(
                'Popular TV Series',
                style: kHeading6,
              ),
              BlocBuilder<PopularTvSeriesBloc, BlocState>(
                builder: (context, state) {
                  if (state is StateLoading) {
                    return const Center(
...
